--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,7 @@
-numpy==2.3.5
-scipy==1.16.3
-scikit-learn==1.8.0
-pandas==2.2.0
-nltk==3.9.2
-dash==3.3.0
-plotly==6.5.0
-gunicorn==23.0.0
-Flask==3.1.2
-Werkzeug==3.1.4
-blinker==1.9.0
-click==8.3.1
-itsdangerous==2.2.0
-Jinja2==3.1.6
-markupsafe==3.0.3
-requests==2.32.5
-regex==2025.11.3
-tqdm==4.67.1
-threadpoolctl==3.6.0
-joblib==1.5.2
-packaging==25.0
-zipp==3.23.0
-typing_extensions==4.15.0
-charset_normalizer==3.4.4
-idna==3.11
-urllib3==2.6.2
-certifi==2025.11.12
-nest-asyncio==1.6.0
+pandas
+numpy
+scikit-learn
+nltk
+dash
+plotly
+gunicorn
